client2/src/index.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap");
@import url("https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap");

html,
body,
#app,
#app > div,
#root {
  height: 100%;
  color: white;
  overflow-x: hidden;
  font-family: "Open Sans Condensed", sans-serif;
}

body {
  background-color: #282828;
  text-shadow: 2px 2px 5px grey;
}

.navbar {
  z-index: 10;
}

/* Test Coloration for Divs */
.testColor {
  background-color: red;
  color: white;
}

/* Dark Border All */
.darkBorder{
  border: solid 1px #0b0c10;
  margin: 0 5px 0 5px;
  box-shadow: 2px 2px 5px black;
}

/* Dark Border Bot */
.darkBorderBot {
  border-bottom: solid 1px #2b2f3f;
}
/* DARKEST BG COLOR */
.darkestBg {
  background-color: #0b0c10;
}

/* DARK BG COLOR */
.darkBg {
  background-color: #1f2833;
}

/* LIGHT BG COLOR */
.lightBg {
  background-color: #2b2f3f;
}

/* MEDIUM FONT COLOR */
.medFont {
  /* color: #c5c6c7; */
  color: #f2a10b;
}

/* LIGHT FONT COLOR */
.lightFont {
  /* color: #66fcf1; */
  color: #f7f503;
}

/* DARK FONT COLOR */
.darkFont {
  /* color: #45a29e; */
  color: #82811c;
}

/* LIGHTEST FONT COLOR */
.lightestFont {
  color: white;
}

/* VYBE LOGO */
.vybe {
  font-family: "Bungee Inline", cursive;
  font-size: 500%;
}

/* NAVBAR GRADIENT */
.navGradient {
  background: linear-gradient(180deg, #0b0c10 80%, rgba(40, 40, 40, 0) 100%);
  padding: 1rem;
}

#visualizerContainer {
  position: absolute;
  top: 0%;
  height: 100%;
  width: 100%;
}

/*--Flaoting Song Info--*/
.overlay {
  display: flex;
  flex-direction: column;
  position: absolute;
  padding: 1rem;
  border-radius: 1rem;
  width: auto;
  left: 10%;
  top: 70%;
  pointer-events: none;
  z-index: 10;
}

.songInfo {
  border-left: 2px solid white;
  padding: 1rem;
  transition: 0.2s;
}
/*--Floating Song Info END--*/

/*--Visualizer and Background--*/
.mainVisual {
  text-align: center;
  height: 100%;
  width: 100%;
}

.mainVisualOverlay {
  position: absolute;
  top: 0%;
  height: 100%;
  width: 100%;
  background-image: url("./Assets/overlayBG.jpg");
  background-position: center;
  background-size: cover;
  opacity: 0.1;
  z-index: -1;
}
/*--Visualizer and Background END--*/

/* Login */

.loginBG {
  position: absolute;
  top: 0%;
  height: 100%;
  width: 100%;
  background-image: url("./Assets/loginBG.jpg");
  background-position: center;
  background-size: cover;
  opacity: 0.1;
  z-index: -1;
}

.login {
  padding: 5px;
  text-align: center;
  border-radius: 50px;
  cursor: pointer;
  transition: .2s;
  width: 100%;
  margin: auto;
}

.login:hover {
  background: #0b0c10;
}

.toHome{
  padding: 5px;
  text-align: center;
  border-radius: 50px;
  cursor: pointer;
  transition: .2s;
  width: 100%;
  margin: auto;
  margin-top: 1rem;
}

.toHome:hover{
  text-shadow: 2px 2px 5px black;
  background: #0b0c10;
}

.linkStyle{
  color: inherit;
  text-decoration: none;
}

.linkStyle:hover{
  text-decoration: none;
}

.intro{
  display: flex;
  justify-content: center;
  padding: 1rem;
  align-items: center;
  text-align: center;
  font-size: 200%;
  background-image: url("./Assets/verbageBG.jpg");
  background-position: center;
  background-size: cover;
  font-family: "Bungee Inline", cursive;
  margin-bottom: 1rem;
  height: 50Vh;
  text-shadow: 2px 2px 5px black;
  border-radius: 20px;
  color: white;
}

.preVerb{
  font-size: 60%;
}

.verbage{
  display: inline-block;
  padding-left: 8px ;
  color: #f2a10b;
}

.wordsContainer{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  font-size: 200%;
}
/* Login END */

/*--Options Menu--*/

.optionsBtn {
  display: block;
  cursor: pointer;
  color: grey;
}

.optionsBtn:hover {
  transition: 0.2s;
  font-size: 110%;
  color: white;
}

.btnCustom:hover {
  transition: 0.2s;
  color: white;
  cursor: pointer;
}

.optionsHeader{
  font-size: 120%;
  padding: .2rem;
  width: 100%;
  text-align:center;
  background: #0b0c10;
  color: white;
}

.optionsPos{
  right: 1%;
  top: 100%;
  position: absolute;
}
.optionsMenu {
  display: flex;
  border-radius: .2rem;
  transition: 0.2s;
  padding: .5rem;
}

.subMenu{
  padding: .5rem;
}

.inputContainer {
  display: flex;
  text-align: center;
}

.inputFile {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;
}
/*--Options Menu END--*/

/*--Audio Player--*/
.bottomBar{
  opacity: 30%;
  transition: .2s;
}

.bottomBar:hover{
  opacity: 100%;
}

.flex {
  background: #0b0c10 !important;
  box-shadow: 2px 2px 5px black !important;
  color: inherit !important;
  border-radius: 100px;
}

.react-h5-audio-player {
  width: 30% !important;
  color: inherit !important;
}

.toggle-play-button {
  background-color: rgba(40, 40, 40, 0) !important;
  box-shadow: none !important;
  color: inherit !important;
}


.pause-icon {
  box-shadow: rgba(40, 40, 40, 1) 7px 0px 0px 0px inset !important;
  color: inherit !important;
}

/*--Audio Player End*/

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
  .overlay {
    left: 0%;
  }

  h1{
    font-size: 130%;
  }

  h3{
    font-size: 150%;
  }

  .toHome{
    font-size: 150%;
  }

  .vybe {
    font-size: 300%;
  }

  .intro{
    font-size: 150%;
  }
}

